<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nelsonsouza.citycar.Activity_ger_cad_veiculo">

    <TextView
        android:id="@+id/lblAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMarca"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/txtMarca"
        android:layout_marginTop="42dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtPlaca"
        app:layout_constraintTop_toTopOf="@+id/txtPlaca" />

    <TextView
        android:id="@+id/lblModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblModelo"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtMarca" />

    <TextView
        android:id="@+id/lblMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAno"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtCombustivel"
        android:layout_marginTop="59dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="61dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtModeloRod"
        app:layout_constraintTop_toTopOf="@+id/lblModelo" />

    <TextView
        android:id="@+id/lblCombustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCombustivel"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAno"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtCombustivel" />

    <TextView
        android:id="@+id/lblChassi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblChassi"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/txtCombustivel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtCombustivel" />

    <TextView
        android:id="@+id/lblPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPlaca"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/lblPlaca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lblPlaca" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtPlaca"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtPlaca" />

    <EditText
        android:id="@+id/txtModeloRod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtMarca"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtMarca" />

    <EditText
        android:id="@+id/txtAno"
        android:layout_width="116dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtCombustivel"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/lblMarca"
        app:layout_constraintTop_toTopOf="@+id/lblMarca" />

    <EditText
        android:id="@+id/txtCombustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtModeloRod"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toBottomOf="@+id/txtModeloRod"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtModeloRod" />

    <EditText
        android:id="@+id/txtChassi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtCombustivel"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCombustivel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtCombustivel" />

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="cadastrarClicked"
        android:text="@string/btnGravar"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblKmRodado"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtKmRodado"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="1dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtChassi" />

    <EditText
        android:id="@+id/txtKmRodado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtChassi"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/txtChassi"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtChassi" />

</android.support.constraint.ConstraintLayout>
