<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nelsonsouza.citycar.Activity_ger_obt_info_veiculo"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/lblInformePlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/lblInformePlaca"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="2dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/lblInformePlaca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lblInformePlaca" />

    <EditText
        android:id="@+id/txtSituacaoAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:ignore="LabelFor"
        android:editable="false"
        android:inputType="none"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtModeloRod"
        app:layout_constraintTop_toBottomOf="@+id/txtKmRodado"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtModeloRod" />

    <EditText
        android:id="@+id/txtModeloRod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:ignore="LabelFor"
        android:editable="false"
        android:inputType="none"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtCombustivel"
        app:layout_constraintTop_toBottomOf="@+id/txtSituacaoAtual"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtCombustivel" />

    <EditText
        android:id="@+id/txtCombustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:ignore="LabelFor"
        android:editable="false"
        android:inputType="none"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtChassi"
        app:layout_constraintTop_toBottomOf="@+id/txtModeloRod"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtChassi" />

    <EditText
        android:id="@+id/txtSinistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        tools:ignore="LabelFor"
        android:editable="false"
        android:inputType="none"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChassi" />

    <EditText
        android:id="@+id/txtChassi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:ignore="LabelFor"
        android:editable="false"
        android:inputType="none"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtSinistro"
        app:layout_constraintTop_toBottomOf="@+id/txtCombustivel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtSinistro" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/lblMarca"
        tools:ignore="LabelFor"
        android:editable="false"
        android:inputType="none"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtAno"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtAno" />



    <EditText
        android:id="@+id/txtAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="4"
        tools:focusable="false"
        tools:ignore="LabelFor"
        android:editable="false"
        android:inputType="none"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtKmRodado"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtKmRodado" />

    <EditText
        android:id="@+id/txtKmRodado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:focusable="false"
        tools:ignore="LabelFor"
        android:editable="false"
        android:inputType="none"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtSituacaoAtual"
        app:layout_constraintTop_toBottomOf="@+id/txtAno"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtSituacaoAtual" />

    <TextView
        android:id="@+id/lblMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/lblMarca"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblChassi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/lblChassi"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCombustivel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/lblAno"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/lblMarca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblKmRodado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblKmRodado"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/lblAno"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblSituacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSituacao"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/lblKmRodado"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblModelo"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/lblSituacao"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblCombustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCombustivel"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/lblModelo"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblSinistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSinistro"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/lblChassi"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/consultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="consultarClicked"
        android:text="@string/btnConsultar"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
